ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /myapp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  name: http
